methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:25: error: expected class or object definition
def dessineMotifV(){
^PictureMono2:43: error: expected class or object definition
def tourPourV(){
^PictureMono2:53: error: expected class or object definition
def debut(){
^PictureMono2:62: error: expected class or object definition
def fin(){
^PictureMono2:71: error: expected class or object definition
def colorieCase(){
^PictureMono2:76: error: Unmatched closing brace '}' ignored here
}
^