methods.picture.PictureMono2.scala.code
override def run() {
}



/** dessine toute une droite des v
*/
def droitesV(){}
  debut()
  for (i <- 1 to 3){
    Dessiner()
    if(i <= 2){
      tourPourV
    } else{
      fin()
    }
  }
  
}


/**
*desine le motif v
*/
def dessineMotifV(){
  colorieCase()
  gauche()
  avance()
  droite()
  avance()
  colorieCase()
  avance()
  droite()
  avance()
  colorieCase()
  
}
/**
*place la buglle pour le dessin
*
*ne marche que sur ligne droite
*/
def tourPourV(){
  for (i <- 1 to 2){
  gauche()
  for(j <- 1 to 4)
  avance()
  }
}
/** 
* place buggle debut des v 
*/
def debut(){
  gauche()
  for( i <- 1 to 2){
    avance()
  }
}
/**
* place les buggle en fin des v 
*/
def fin(){
      gauche()
      DebutFin()
      gauche()
}

/**
* colorie uniquement la case ou se trouve le buggle
*/
def colorieCase(){
  baisseBrosse()
  leveBrosse()
}